# Copyright 2026 Google LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "mauve_score",
    version = "0.0.1",
    compatibility_level = 1,
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Keep sorted
bazel_dep(name = "abseil-cpp", version = "20260526.0", repo_name = "com_google_absl")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "boringssl", version = "0.20260211.0")
bazel_dep(name = "confidential-federated-compute")
archive_override(
    module_name = "confidential-federated-compute",
    integrity = "sha256-1cKwxfspJ8104a0PyN7VjDaYVch4k+Gd3YdoRXTgZyw=",
    strip_prefix = "confidential-federated-compute-3db256cab9cb1732499cbad28d5adb0b62270013",
    urls = ["https://github.com/google-parfait/confidential-federated-compute/archive/3db256cab9cb1732499cbad28d5adb0b62270013.tar.gz"],
)

bazel_dep(name = "googleapis", version = "0.0.0-20260223-edfe7983", repo_name = "com_google_googleapis")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "grpc", version = "1.80.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "protobuf", version = "33.1", repo_name = "com_google_protobuf")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")
bazel_dep(name = "riegeli", version = "0.0.0-20250706-c4d1f27", repo_name = "com_google_riegeli")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_distroless", version = "0.5.1")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "toolchains_llvm", version = "1.4.0")
bazel_dep(name = "oak")
archive_override(
    module_name = "oak",
    integrity = "sha256-ayZil41/X2ieLpdpJNvuHdRyeWNqVPtoEMCrDL23YjU=",
    strip_prefix = "oak-7884afbd383fc6a2acc1bc81b7ec0684a4d17d7a",
    url = "https://github.com/project-oak/oak/archive/7884afbd383fc6a2acc1bc81b7ec0684a4d17d7a.tar.gz",
)

bazel_dep(name = "federated-compute")
archive_override(
    module_name = "federated-compute",
    integrity = "sha256-1o56IeX19ekD8VUEyB1U0sS/ZRg/pDb6k2JnUZiXxP8=",
    strip_prefix = "federated-compute-54d58fc93292aa39f70f4746d59a5863fb05828b",
    urls = ["https://github.com/google-parfait/federated-compute/archive/54d58fc93292aa39f70f4746d59a5863fb05828b.tar.gz"],
)

internal_configure = use_extension("@pybind11_bazel//:internal_configure.bzl", "internal_configure_extension")
use_repo(internal_configure, "pybind11")

fcp_deps = use_extension("@federated-compute//fcp:extensions.bzl", "fcp_deps")
use_repo(fcp_deps, "bazel_toolchains", "org_tensorflow_federated")

single_version_override(
    module_name = "abseil-cpp",
    version = "20260526.0",
)

http_archive(
    name = "sysroot",
    sha256 = "86ccf9ea2360237ecad01633a86d566ed16e137daf986320ef91ec295ea5f679",
    url = "https://github.com/google-parfait/confidential-federated-compute/releases/download/sysroot-20260311/sysroot.tar.xz",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = False,
    ignore_root_user_error = True,
    python_version = "3.11",
)

# Set up cc toolchain
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "14.0.0",
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "python_3_11_slim_bookworm",
    digest = "sha256:838ff46ae6c481e85e369706fa3dea5166953824124735639f3c9f52af85f319",
    image = "python",
    platforms = ["linux/amd64"],
)
use_repo(oci, "python_3_11_slim_bookworm", "python_3_11_slim_bookworm_linux_amd64")

# Define the PIP deps we need from the requirements_lock.txt file.
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    # Use pypi downloader instead of Gcloud artifact registry.
    experimental_index_url = "https://pypi.org/simple",
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")
