# Copyright 2025 Google LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "private_inference",
    version = "0.0.1",
    compatibility_level = 1,
)

single_version_override(
    module_name = "rules_python",
    version = "1.5.4",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "abseil-cpp", version = "20250814.0", repo_name = "com_google_absl")
bazel_dep(name = "rules_cc", version = "0.2.0")
bazel_dep(name = "rules_distroless", version = "0.5.1")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "toolchains_llvm", version = "1.4.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_python", version = "1.5.4")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "33.0-rc2", repo_name = "com_google_protobuf")
bazel_dep(name = "grpc", version = "1.78.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "tink_cc", version = "2.4.0", repo_name = "com_google_tink")
bazel_dep(name = "nlohmann_json", version = "3.11.3")  # Needed for JSON parsing
bazel_dep(name = "rules_foreign_cc", version = "0.11.1")
bazel_dep(name = "curl", version = "8.11.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
bazel_dep(name = "googleapis", version = "0.0.0-20260223-edfe7983", repo_name = "com_google_googleapis")
bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "googletest", version = "1.17.0", repo_name = "com_google_googletest")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.13")
python.toolchain(python_version = "3.13")
use_repo(python, "python_3_13")

register_toolchains("@python_3_13//:all")

http_archive(
    name = "sysroot",
    sha256 = "f58c289b3ccb28895ad8ca408ac366e709037088e8b5c28aca18212adc18c31e",
    url = "https://github.com/google-parfait/confidential-federated-compute/releases/download/sysroot-20250618/sysroot.tar.xz",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "19.1.0",
    stdlib = {"linux-x86_64": "stdc++"},
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc_debian12_base",
    digest = "sha256:6714977f9f02632c31377650c15d89a7efaebf43bab0f37c712c30fc01edb973",
    image = "gcr.io/distroless/cc-debian12",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_cc_debian12_base", "distroless_cc_debian12_base_linux_amd64")

bazel_dep(name = "confidential-federated-compute")
archive_override(
    module_name = "confidential-federated-compute",
    integrity = "sha256-oVQ9GoFdflYUdiF/Xk4hc58ofLLK9dcPhzAV9JXvJro=",
    patches = [
        "//third_party/confidential-federated-compute:make_gemma_regular_dep_module.patch",
    ],
    strip_prefix = "confidential-federated-compute-199846cdd20b731a294886492cb9bce6a1e0fac4",
    urls = ["https://github.com/google-parfait/confidential-federated-compute/archive/199846cdd20b731a294886492cb9bce6a1e0fac4.zip"],
)

bazel_dep(name = "oak")
archive_override(
    module_name = "oak",
    integrity = "sha256-jjUzyg3EQw0wNllRRmtRuZTAlXPllSmkKJHRD13jEXM=",
    strip_prefix = "oak-dd8e629ee6e198153d86fec3f55645a8330f6b66",
    urls = ["https://github.com/project-oak/oak/archive/dd8e629ee6e198153d86fec3f55645a8330f6b66.tar.gz"],
)

bazel_dep(name = "boringssl", version = "0.20260211.0")
bazel_dep(name = "federated-compute")
archive_override(
    module_name = "federated-compute",
    integrity = "sha256-1ixsFoZUXs9VwUN3+32nIelRCkyI7SzSirR+CAFYyZs=",
    strip_prefix = "federated-compute-f7c4a0a651742968ab0f2addcd8c1b922ebf2e3f",
    urls = ["https://github.com/google-parfait/federated-compute/archive/f7c4a0a651742968ab0f2addcd8c1b922ebf2e3f.tar.gz"],
)

bazel_dep(name = "gemma", version = "0.0.1")
archive_override(
    module_name = "gemma",
    patches = ["//third_party/gemma:module.patch"],
    strip_prefix = "gemma.cpp-73f1140dca92b42a5a5cf620ad3b6d9c0c35155e",
    urls = ["https://github.com/google/gemma.cpp/archive/73f1140dca92b42a5a5cf620ad3b6d9c0c35155e.tar.gz"],
)

archive_override(
    module_name = "highway",
    integrity = "sha256-i9++XA+1SLKEUFqlL+OVtQFC79Spmd7SDWcqJo2OKNE=",
    strip_prefix = "highway-1d16731233de45a365b43867f27d0a5f73925300",
    urls = ["https://github.com/google/highway/archive/1d16731233de45a365b43867f27d0a5f73925300.tar.gz"],
)

# Rust crates.
oak_crates = use_extension("@oak//bazel/crates:extensions.bzl", "aliased_crates_repository")
use_repo(oak_crates, "oak_crates_index")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust", dev_dependency = True)
rust.toolchain(
    edition = "2021",
    sha256s = {
        "2025-03-01/cargo-nightly-x86_64-unknown-linux-gnu.tar.xz": "9dfde3b932a240ed7adbef95f9d1437681137c6e0b71ad95b2579cada0623e26",
        "2025-03-01/clippy-nightly-x86_64-unknown-linux-gnu.tar.xz": "f5cb5053fee14e60bac386caf37a3542f6ac34fd73076e9329e4aac2e6caf640",
        "2025-03-01/llvm-tools-nightly-x86_64-unknown-linux-gnu.tar.xz": "22ed657fa3092f172cda7ff2c68d560f03e312d0b0d643356d89f4254e858c92",
        "2025-03-01/rust-std-nightly-x86_64-unknown-linux-gnu.tar.xz": "bbfecef0f783ff9fde8485c3739ca71f549e44d9633e58ed5086cf7a09da3fd9",
        "2025-03-01/rustc-nightly-x86_64-unknown-linux-gnu.tar.xz": "089b01d390bf42e40b2f1eb960033bba83b54c5b70c2d457e0a31ecb99e87f11",
    },
    versions = ["nightly/2025-03-01"],
)
