# Copyright 2026 Google LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "willow",
    version = "0.0.1",
    compatibility_level = 1,
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "abseil-cpp", version = "20250814.1", repo_name = "com_google_absl")
single_version_override(
    module_name = "abseil-cpp",
    version = "20250814.1",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "boringssl", version = "0.20251002.0")
bazel_dep(name = "confidential-federated-compute")
archive_override(
    module_name = "confidential-federated-compute",
    integrity = "sha256-VKEP474jy/vY04VN/6iob/jDjbf+e4B3c2BkAE+ckTY=",
    strip_prefix = "confidential-federated-compute-2f39d187df2f19b188570f5a38fdc13fb3f54cbc",
    urls = ["https://github.com/google-parfait/confidential-federated-compute/archive/2f39d187df2f19b188570f5a38fdc13fb3f54cbc.tar.gz"],
)

bazel_dep(name = "googleapis", version = "0.0.0-20250730-f6801ce4", repo_name = "com_google_googleapis")
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "protobuf", version = "30.0")
single_version_override(
    module_name = "protobuf",
    version = "30.0",
)

bazel_dep(name = "grpc", version = "1.74.1", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")
single_version_override(
    module_name = "rules_cc",
    version = "0.2.14",
)

bazel_dep(name = "rules_distroless", version = "0.5.1")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.7.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = False,
    ignore_root_user_error = True,
    python_version = "3.11",
)

bazel_dep(name = "oak")
archive_override(
    module_name = "oak",
    integrity = "sha256-ayZil41/X2ieLpdpJNvuHdRyeWNqVPtoEMCrDL23YjU=",
    strip_prefix = "oak-7884afbd383fc6a2acc1bc81b7ec0684a4d17d7a",
    url = "https://github.com/project-oak/oak/archive/7884afbd383fc6a2acc1bc81b7ec0684a4d17d7a.tar.gz",
)

# Willow and dependencies.
bazel_dep(name = "secure_aggregation", version = "0.0.0")
archive_override(
    module_name = "secure_aggregation",
    integrity = "sha256-SXk5sRDHWUCqivOvs01YrqZ2sF3s7PBUiP79je58mH4=",
    strip_prefix = "secure-aggregation-4fedb7521362987956d34a69da6e9408d85685ec",
    urls = ["https://github.com/google/secure-aggregation/archive/4fedb7521362987956d34a69da6e9408d85685ec.zip"],
)

bazel_dep(name = "shell-encryption", version = "0.0.0")
archive_override(
    module_name = "shell-encryption",
    integrity = "sha256-fR28P87WkRNGlF38tO/cMz9mrt6g/+LF8jhK4eeAows=",
    strip_prefix = "shell-encryption-8607279e72f79efc51077f2b4f982a6a6296774e",
    urls = [
        "https://github.com/google/shell-encryption/archive/8607279e72f79efc51077f2b4f982a6a6296774e.zip",
    ],
)

# Root CFC dependencies
cfc_deps = use_extension("@confidential-federated-compute//:extensions.bzl", "cfc_deps")
use_repo(cfc_deps, "bazel_toolchains", "federated-compute", "libcppbor")

http_archive(
    name = "sysroot",
    sha256 = "f58c289b3ccb28895ad8ca408ac366e709037088e8b5c28aca18212adc18c31e",
    url = "https://github.com/google-parfait/confidential-federated-compute/releases/download/sysroot-20250618/sysroot.tar.xz",
)

bazel_dep(name = "toolchains_llvm", version = "1.4.0")

# Set up cc toolchain
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "14.0.0",
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc_debian12_base",
    digest = "sha256:6714977f9f02632c31377650c15d89a7efaebf43bab0f37c712c30fc01edb973",
    image = "gcr.io/distroless/cc-debian12",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_cc_debian12_base", "distroless_cc_debian12_base_linux_amd64")
