# Copyright 2026 Google LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "willow",
    version = "0.0.1",
    compatibility_level = 1,
)

# go/keep-sorted start
bazel_dep(name = "abseil-cpp", version = "20260107.1", repo_name = "com_google_absl")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "boringssl", version = "0.20260211.0")
bazel_dep(name = "confidential-federated-compute")
bazel_dep(name = "federated-compute")
bazel_dep(name = "googleapis", version = "0.0.0-20260223-edfe7983")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "grpc", version = "1.78.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "oak")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "33.1", repo_name = "com_google_protobuf")
bazel_dep(name = "pybind11_abseil", version = "0.0.0")
bazel_dep(name = "pybind11_bazel", version = "3.0.1")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_distroless", version = "0.6.1")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.5.4")
bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "rules_rust_bindgen", version = "0.69.0")
bazel_dep(name = "rules_rust_prost")
bazel_dep(name = "secure_aggregation", version = "0.0.0")
bazel_dep(name = "shell-encryption", version = "0.0.0")
bazel_dep(name = "toolchains_llvm", version = "1.6.0")
# go/keep-sorted end

single_version_override(
    module_name = "rules_cc",
    version = "0.2.14",
)

single_version_override(
    module_name = "rules_python",
    version = "1.5.4",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = False,
    ignore_root_user_error = True,
    python_version = "3.11",
)

fcp_deps = use_extension("@federated-compute//fcp:extensions.bzl", "fcp_deps")
use_repo(fcp_deps, "bazel_toolchains")

# Module overrides.
# go/keep-sorted start block=yes newline_separated=yes ignore_prefixes=archive_override
archive_override(
    # Patches protobuf to make the Rust libraries visible. See
    # https://github.com/protocolbuffers/protobuf/issues/23866.
    module_name = "protobuf",
    integrity = "sha256-F4n12LZfTcM249HtTdCAw3iK35iU7Ei61GTtjK3cS4Y=",
    patches = ["//third_party/protobuf:visibility.patch"],
    strip_prefix = "protobuf-9151e03956a34b795ca0d58e19d8a9991904b459",
    urls = ["https://github.com/google/protobuf/archive/9151e03956a34b795ca0d58e19d8a9991904b459.zip"],
)

archive_override(
    module_name = "confidential-federated-compute",
    integrity = "sha256-lMOjJOvADvYz/UGRL3BPuwmffH5LvyBuu4jSJTh+3Ko=",
    strip_prefix = "confidential-federated-compute-199846cdd20b731a294886492cb9bce6a1e0fac4",
    urls = ["https://github.com/google-parfait/confidential-federated-compute/archive/199846cdd20b731a294886492cb9bce6a1e0fac4.tar.gz"],
)

archive_override(
    module_name = "federated-compute",
    integrity = "sha256-Lq4XdaOguJQ6qGbNTSKshZy0OYm7SjVFyW8IExoVPv8=",
    strip_prefix = "federated-compute-cf87047132741a252cc29da444e1ffabb406a7a6",
    urls = ["https://github.com/google-parfait/federated-compute/archive/cf87047132741a252cc29da444e1ffabb406a7a6.tar.gz"],
)

archive_override(
    module_name = "oak",
    integrity = "sha256-pixFPDN0SkhA67jY9RmLL1YZODefPmpZfoJJP7kqpyM=",
    patches = [
        "//third_party/oak:module.patch",
        "//third_party/oak:session_binder.patch",
        "//third_party/oak:rules_cc.patch",
    ],
    strip_prefix = "oak-7ad6bf3867bc969603f55ba8afff42a200e03745",
    urls = ["https://github.com/project-oak/oak/archive/7ad6bf3867bc969603f55ba8afff42a200e03745.tar.gz"],
)

archive_override(
    module_name = "pybind11_abseil",
    integrity = "sha256-stbnMI5Cie1ObYbUQdc1ZQ9E9pfnQPQcvZAB/HIp7fI=",
    strip_prefix = "pybind11_abseil-ba91614c11c42c7aa6e2e4f96c08721748af5b18",
    urls = [
        "https://github.com/pybind/pybind11_abseil/archive/ba91614c11c42c7aa6e2e4f96c08721748af5b18.zip",
    ],
)

archive_override(
    module_name = "rules_rust_prost",
    integrity = "sha256-u8dkwlLQYSgbI1knek1GSA4tz69yr8HObgCtpYzL/Uw=",
    patches = ["//third_party/rules_rust:prost_deps.patch"],
    strip_prefix = "extensions/prost",
    urls = ["https://github.com/bazelbuild/rules_rust/releases/download/0.69.0/rules_rust-0.69.0.tar.gz"],
)

archive_override(
    module_name = "secure_aggregation",
    integrity = "sha256-b6szgD8dPbFA4LzoXCyrn8tvdtXf0o3YPhb3eRqysko=",
    patches = ["//third_party/secure_aggregation:visibility.patch"],
    strip_prefix = "secure-aggregation-d988dfc4670f1ca4e6258ffed9d9ab7d42ff22db",
    urls = ["https://github.com/google/secure-aggregation/archive/d988dfc4670f1ca4e6258ffed9d9ab7d42ff22db.zip"],
)

archive_override(
    module_name = "shell-encryption",
    integrity = "sha256-2rPwT9YWCS8IgN+bFDAU6Pc7QJ/iiP0nXV98JqlYBeE=",
    strip_prefix = "shell-encryption-6b521659f4bb37d88ccb981f30319c29c373c06f",
    urls = [
        "https://github.com/google/shell-encryption/archive/6b521659f4bb37d88ccb981f30319c29c373c06f.zip",
    ],
)
# go/keep-sorted end

# Dependencies that do not use bzlmod yet.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# go/keep-sorted start block=yes newline_separated=yes ignore_prefixes=http_archive
http_archive(
    name = "raft_rs",
    patches = ["@trusted_computations_platform//third_party/raft_rs:bazel.patch"],
    sha256 = "e755de7613e7105c3bf90fb7742887cce7c7276723f16a9d1fe7c6053bd91973",
    strip_prefix = "raft-rs-10968a112dcc4143ad19a1b35b6dca6e30d2e439",
    url = "https://github.com/google-parfait/raft-rs/archive/10968a112dcc4143ad19a1b35b6dca6e30d2e439.tar.gz",
)

http_archive(
    name = "sysroot",
    sha256 = "86ccf9ea2360237ecad01633a86d566ed16e137daf986320ef91ec295ea5f679",
    url = "https://github.com/google-parfait/confidential-federated-compute/releases/download/sysroot-20260311/sysroot.tar.xz",
)

http_archive(
    name = "trusted_computations_platform",
    integrity = "sha256-CdNN7zYRk2Jn4gcQSf/Zmtd0VGb2Z5goS0Saj+eztng=",
    strip_prefix = "trusted-computations-platform-ae07ab331d468c72844a8347adc13a8b500e8347",
    url = "https://github.com/google-parfait/trusted-computations-platform/archive/ae07ab331d468c72844a8347adc13a8b500e8347.tar.gz",
)

# go/keep-sorted end

# Rust crates.
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.annotation(
    crate = "bindgen-cli",
    gen_binaries = ["bindgen"],
)
crate.annotation(
    crate = "protoc-gen-prost",
    gen_binaries = ["protoc-gen-prost"],
)
crate.annotation(
    crate = "protoc-gen-tonic",
    gen_binaries = ["protoc-gen-tonic"],
)
crate.spec(
    artifact = "bin",
    package = "bindgen-cli",
    version = "0.71.1",
)
crate.spec(
    package = "protoc-gen-prost",
    version = "0.5.0",
)
crate.spec(
    package = "protoc-gen-tonic",
    version = "0.5.0",
)
crate.from_specs(
    name = "willow_crates",
    host_tools = "@rust_host_tools_nightly",
)
use_repo(crate, "willow_crates")

aliased_crates_repository = use_extension("@oak//bazel/crates:extensions.bzl", "aliased_crates_repository")
use_repo(aliased_crates_repository, "oak_crates_index")

# Set up cc toolchain
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "14.0.0",
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc_debian12_base",
    digest = "sha256:6714977f9f02632c31377650c15d89a7efaebf43bab0f37c712c30fc01edb973",
    image = "gcr.io/distroless/cc-debian12",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_cc_debian12_base", "distroless_cc_debian12_base_linux_amd64")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    sha256s = {
        "2025-03-01/cargo-nightly-x86_64-unknown-linux-gnu.tar.xz": "9dfde3b932a240ed7adbef95f9d1437681137c6e0b71ad95b2579cada0623e26",
        "2025-03-01/clippy-nightly-x86_64-unknown-linux-gnu.tar.xz": "f5cb5053fee14e60bac386caf37a3542f6ac34fd73076e9329e4aac2e6caf640",
        "2025-03-01/llvm-tools-nightly-x86_64-unknown-linux-gnu.tar.xz": "22ed657fa3092f172cda7ff2c68d560f03e312d0b0d643356d89f4254e858c92",
        "2025-03-01/rust-std-nightly-x86_64-unknown-linux-gnu.tar.xz": "bbfecef0f783ff9fde8485c3739ca71f549e44d9633e58ed5086cf7a09da3fd9",
        "2025-03-01/rustc-nightly-x86_64-unknown-linux-gnu.tar.xz": "089b01d390bf42e40b2f1eb960033bba83b54c5b70c2d457e0a31ecb99e87f11",
    },
    versions = ["nightly/2025-03-01"],
)

rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")
rust_host_tools.host_tools(
    name = "rust_host_tools_nightly",
    edition = "2024",
    sha256s = {
        "2025-03-01/cargo-nightly-x86_64-unknown-linux-gnu.tar.xz": "9dfde3b932a240ed7adbef95f9d1437681137c6e0b71ad95b2579cada0623e26",
        "2025-03-01/clippy-nightly-x86_64-unknown-linux-gnu.tar.xz": "f5cb5053fee14e60bac386caf37a3542f6ac34fd73076e9329e4aac2e6caf640",
        "2025-03-01/llvm-tools-nightly-x86_64-unknown-linux-gnu.tar.xz": "22ed657fa3092f172cda7ff2c68d560f03e312d0b0d643356d89f4254e858c92",
        "2025-03-01/rust-std-nightly-x86_64-unknown-linux-gnu.tar.xz": "bbfecef0f783ff9fde8485c3739ca71f549e44d9633e58ed5086cf7a09da3fd9",
        "2025-03-01/rustc-nightly-x86_64-unknown-linux-gnu.tar.xz": "089b01d390bf42e40b2f1eb960033bba83b54c5b70c2d457e0a31ecb99e87f11",
    },
    version = "nightly/2025-03-01",
)
use_repo(rust_host_tools, "rust_host_tools_nightly")

register_toolchains(
    "//toolchains:bindgen_toolchain",
    "//toolchains:prost_toolchain",
    "@llvm_toolchain//:all",
)
