[package]
name = "square_service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
byteorder = { version = "*", default-features = false }
micro_rpc = { workspace = true }
pipeline_transforms = { path = "../../pipeline_transforms" }

[dev-dependencies]
cfc_crypto = { path = "../../cfc_crypto" }
pipeline_transforms = { path = "../../pipeline_transforms", features = ["test"] }
