[package]
name = "square_service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
byteorder = { version = "*", default-features = false }
micro_rpc = { workspace = true }
oak_attestation = { workspace = true }
oak_restricted_kernel_sdk = { workspace = true }
pipeline_transforms = { path = "../../pipeline_transforms" }

[dev-dependencies]
anyhow = { version = "*", default-features = false }
cfc_crypto = { path = "../../cfc_crypto" }
coset = { version = "*", default-features = false }
oak_restricted_kernel_sdk = { workspace = true, features = ["testing"] }
pipeline_transforms = { path = "../../pipeline_transforms", features = ["test"] }
sha2 = { version = "*", default-features = false }
